--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "backend": "cd backend && npm run dev",
     "frontend": "react-scripts start",
     "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
-    "dev:quiet": "concurrently --kill-others-on-fail \"npm run backend\" \"npm run frontend\" --prefix-colors \"bgBlue.bold,bgMagenta.bold\" --names \"BACKEND,FRONTEND\""
+    "dev:quiet": "concurrently --kill-others-on-fail \"npm run backend\" \"npm run frontend\" --prefix-colors \"bgBlue.bold,bgMagenta.bold\" --names \"BACKEND,FRONTEND\"",
+    "vercel-build": "react-scripts build",
+    "preview": "npm run build && npx serve -s build"
   },
   "eslintConfig": {
     "extends": [
